Improves UI/UX of the small layout components (links, paragraphs, simple buttons), fixes minor alignment incorrections inside fees block.

--- a/components/_components.facts-block.scss
+++ b/components/_components.facts-block.scss
@@ -2,6 +2,7 @@
 =       FACTS BLOCK             =
 ===============================*/
 
+// TODO: Refactor!
 .facts-block {
     .facts-wrap {
 
@@ -20,6 +21,19 @@
                 font-size: .9em;
                 padding-top: .3em;
             }
+
+            > .ico {
+                position: absolute; top: 0; left: 0;
+                margin-right: 1.5em;
+                width: 50px;
+                font-size: 1.9em;
+
+                &:before { vertical-align: top; }
+            }
+        }
+
+        .tooltip-icon {
+            font-size: 115%;
         }
 
         .fees-fact {
@@ -61,15 +75,6 @@
                 @include make-table-column ( .5 );
             }
         }
-
-        .ico {
-            position: absolute; top: 0; left: 0;
-            margin-right: 1.5em;
-            width: 50px;
-            font-size: 1.9em;
-
-            &:before { vertical-align: top; }
-        }
     }
 
     .fact__list {
@@ -83,3 +88,18 @@
     }
 }
 
+
+.link-more {
+    transition: none;
+    font-size: 90%;
+    margin: 0 .3em;
+}
+
+// Inline block that might be or might not be used inside a dynamic content.
+.inliner {
+    margin-right: .3em;
+
+    & + .link-more {
+        margin-left: 0;
+    }
+}
